syntax = "proto3";

package star_types;

import "transaction.proto";
import "off_chain_transaction.proto";

message OpenChannelNodeNegotiateMessage {
    bytes sender_addr = 1;
    StructTag resource_type = 2 ;
    int64 sender_amount = 3 ;
    bytes receiver_addr= 4;
    int64 receiver_amount = 5 ;
    bytes sender_sign = 6 ;
    ReceiveSignMessage receiver_sign = 7 ;
}

message OpenChannelTransactionMessage {
    star_types.OffChainTransaction transaction = 1;
}

message OffChainPayMessage {
    star_types.OffChainTransaction transaction = 1;
}

message ReceiveSignMessage {
    bytes receiver_sign = 1 ;
}

message StructTag {
    bytes account_addr = 1;
    string module = 2;
    string name =3;
    repeated StructTag type_params = 4;
}